--- a/marjane_api_EDA.ipynb
+++ b/marjane_api_EDA.ipynb
@@ -2707,7 +2707,24 @@
    "source": [
     "## boxplot price / categorie\n",
     "\n",
-    "test commit"
+    "test commit vs code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "536\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(df))"
    ]
   }
  ],
