--- a/marjane_api_oop.ipynb
+++ b/marjane_api_oop.ipynb
@@ -10,6 +10,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# from codespace\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime"
@@ -393,7 +394,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.8 64-bit (system)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -407,12 +408,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "771ed343664c905c0a94df97cf6bc638c90cd8b85f38c1ff514a0f82301c60f1"
+    "hash": "4f946df053fbf2b937619d3c5458e7af74262f9a954d8797ba0b27400bcafe06"
    }
   }
  },
