--- a/marjane_api_oop.ipynb
+++ b/marjane_api_oop.ipynb
@@ -2,15 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 3,
-=======
    "execution_count": 1,
->>>>>>> 13c749f (fff)
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from codespace\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime"
@@ -18,11 +13,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 67,
-=======
-   "execution_count": 32,
->>>>>>> 13c749f (fff)
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,20 +49,6 @@
     "        spend_by_category.sort_values(by='category_spend', ascending=False, inplace=True)\n",
     "        spend_by_category_reduced = spend_by_category[:topk]\n",
     "        return spend_by_category_reduced\n",
-<<<<<<< HEAD
-    "\n",
-    "    \n",
-    "    def getDayOfWeekSplit(self):\n",
-    "        ## append DoW : 0 monday, 6 sunday\n",
-    "        tmp_df = self.trx_log.copy()\n",
-    "        return len(tmp_df)\n",
-    "        ##tmp_df['trx_dow'] = tmp_df.dt.dayofweek\n",
-    "        ##tmp_df.drop_duplicates(subset=['trx_id'])['trx_dow'].value_counts(normalize=False, ascending=False)\n",
-    "        ##dow_pct = tmp_df.drop_duplicates(subset=['trx_id'])['trx_dow'].value_counts(normalize=True, ascending=False).to_frame().reset_index()\n",
-    "        ##dow_pct.columns = ['trx_dow', 'cnt_trx']\n",
-    "        ##return doc_pct\n",
-    "\n",
-=======
     "        \n",
     "    def getDayOfWeekSplit(self):\n",
     "    ## append DoW : 0 monday, 6 sunday\n",
@@ -83,19 +60,15 @@
     "        return dow_pct\n",
     "\n",
     "\n",
-    "    def getTripStats(self)::\n",
+    "    def getTripStats(self):\n",
+    "        pass\n",
     "        \n",
->>>>>>> 13c749f (fff)
     "        "
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 37,
-=======
    "execution_count": 33,
->>>>>>> 13c749f (fff)
    "metadata": {},
    "outputs": [
     {
@@ -116,11 +89,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 41,
-=======
    "execution_count": 6,
->>>>>>> 13c749f (fff)
    "metadata": {},
    "outputs": [
     {
@@ -137,11 +106,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 55,
-=======
    "execution_count": 7,
->>>>>>> 13c749f (fff)
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,11 +115,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 45,
-=======
    "execution_count": 8,
->>>>>>> 13c749f (fff)
    "metadata": {},
    "outputs": [
     {
@@ -251,11 +212,7 @@
        "50                  POULET L.S          328.00"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 45,
-=======
      "execution_count": 8,
->>>>>>> 13c749f (fff)
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,26 +223,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'analyse_marjane' object has no attribute 'getDayOfWeekSplit'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_3384\\3037581174.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdow_distrib\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0manalyse_mm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetDayOfWeekSplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'analyse_marjane' object has no attribute 'getDayOfWeekSplit'"
-     ]
-    }
-   ],
-   "source": [
-    "dow_distrib = analyse_mm.getDayOfWeekSplit()"
-   ]
-=======
    "execution_count": 34,
    "metadata": {},
    "outputs": [],
@@ -389,12 +326,11 @@
    "metadata": {},
    "outputs": [],
    "source": []
->>>>>>> 13c749f (fff)
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.7.8 64-bit (system)",
    "language": "python",
    "name": "python3"
   },
@@ -408,12 +344,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.7.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4f946df053fbf2b937619d3c5458e7af74262f9a954d8797ba0b27400bcafe06"
+    "hash": "771ed343664c905c0a94df97cf6bc638c90cd8b85f38c1ff514a0f82301c60f1"
    }
   }
  },
